--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,20 @@
     "default_icon": "icon.png",
     "default_popup": "quickview.html"
   },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["content-script.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    "js/modules/event-binder.js",
+    "content-script.js"
+  ],
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "tabs"
   ]
 }
